[package]
name = "spacesurvival"
version = "0.0.1"
authors = ["Arne Beer <privat@arne.beer>, Rafael Epplée <raffomania@gmail.com>"]

[[bin]]
path = "server/src/main.rs"
name = "spacesurvival"

[lib]
path = "server/src/lib.rs"
name = "spacelib"

[dependencies]
uuid = { version = "0.5", features = ["use_std", "serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
argon2rs = "0.2"
rocket = { version = "0.3"}
rocket_codegen = "0.3"
diesel = { version = "0.16", features = ["postgres", "uuid", "chrono", "serde_json"] }
diesel_codegen = { version = "0.16", features = ["postgres"] }
r2d2 = "0.7"
r2d2-diesel = "0.16"
serde = "1"
serde_json = "1"
serde_yaml = "0.7"
serde_derive = "1"
validator = "0.6"
validator_derive = "0.6"
petgraph = "0.4"
ring = "0.11"

[dev-dependencies]
quickcheck = "0.4"
stainless = "0.1"
parking_lot = {version = "0.4", features = ["nightly"]}

[dependencies.rocket_contrib]
version = "0.3"
default-features = false
features = ["json"]
